greencharge/enact-chart/manifests/greencharge.yaml
---
# Source: greencharge/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greencharge
  labels:
    app.kubernetes.io/name: greencharge
    app.kubernetes.io/instance: greencharge
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: greencharge-0.1.0
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: greencharge
    app.kubernetes.io/instance: greencharge
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
# Source: greencharge/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greencharge
  labels:
    app.kubernetes.io/name: greencharge
    app.kubernetes.io/instance: greencharge
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: greencharge-0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: greencharge
      app.kubernetes.io/instance: greencharge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: greencharge
        app.kubernetes.io/instance: greencharge
        name: greencharge
    spec:
      securityContext:
        {}
      nodeSelector:
        enact.eu/role: edge
      containers:
        - name: greencharge
          image: "docker.io/library/greencharge:1.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            {}
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 5
            failureThreshold: 36
          readinessProbe:
            tcpSocket:
              port: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          resources:
            {}
---
# Source: greencharge/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greencharge
  labels:
    app.kubernetes.io/name: greencharge
    app.kubernetes.io/instance: greencharge
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: greencharge-0.1.0
spec:
  rules:
    - host: greencharge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greencharge
                port:
                  number: 8080
